# Mathutil

./: Cargo.toml  README.md
src/: main.rs  registry.rs  scene.rs  theme.rs  tui.rs  viz_spawn.rs
src/core/: expr.rs  integrate.rs  linalg.rs  mod.rs  parse.rs
src/topics/: calculus.rs  fundamental.rs  mod.rs  multivar.rs  spaces.rs  transforms.rs
src/viz/: func.rs  mod.rs  plot2d.rs  three.rs
