[package]
name = "mathutil-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.6.1"
crossterm = "0.29.0"
eframe = "0.35.0"
egui_plot = "0.36.0"
libc = "0.2.186"
nalgebra = "0.35.0"
ratatui = "0.30.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
